# p2p-webrtc

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  vcpkg.json
profiles/: pizero2w
src/: main.cpp  main.html  main2.html  p2s.hpp
